--- a/lab5/style.css
+++ b/lab5/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f0f4f8;
+  background-color: #2a3d66;
   color: #333;
   min-height: 100vh;
 }
@@ -14,9 +14,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 30px;
+  gap: 45px;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 80px;
 
 }
 ul li a,ul li{
@@ -97,10 +97,10 @@ ul li a,ul li{
 /* ========== PARAGRAPH SECTION ========== */
 .paragraph {
   padding: 20px;
-  background-color: #babdc5;
+  background-color: #adb5ce;;
   overflow-y: auto;
   border-radius: 10px;
-  height: 400px;
+  height: 550px;
 }
 
 /* Make paragraph responsive */
@@ -118,21 +118,24 @@ ul li a,ul li{
   border-radius: 10px;
   height: 100%;
   background: #adb5ce;
-
+  
 }
 
 .profile-card {
   width: 100%;
+  height: 500px;
   max-width: 100%;
   text-align: center;
+  
   border-radius: 10px;
   background: #ffffff;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
-
+  
 }
 
 .profile {
+  margin-top: 80px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -148,7 +151,7 @@ ul li a,ul li{
 
 /* ========== FOOTER ========== */
 .footer {
-  background-color: #2a3d66;
+  background-color: #282d41;
   color: white;
   display: flex;
   align-items: center;
